changes on index.html &script.js

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="label">
 
         <div>
-        <label class="nameLabel" id="name-label">Name</label><span class="span"></span>
+        <label class="nameLabel" id="name-label"><b>Name</b></label><span class="span"></span>
         </div>
         <div class="nameDiv">
         <input required placeholder=" firstName"  id="firstname" type="text"></input>
@@ -23,14 +23,14 @@
         </div>
 
         <div>
-        <label class="nameLabel" id="email-label">Email</label><span class="span1"></span>
+        <label class="nameLabel" id="email-label"><b>Email</b></label><span class="span"></span>
         </div>
         <div class="nameDiv">
         <input requried placeholder="Enter your email"  id="email" type="text"></input>
         </div>
 
         <div>
-            <label class="nameLabel">your Experience</label><span class="span2"></span>
+            <label class="nameLabel"><b>your Experience</b></label><span class="span"></span>
             <div>
             <i class="fa fa-star" aria-hidden="true"></i>
             <i class="fa fa-star" aria-hidden="true"></i>
@@ -40,7 +40,7 @@
         </div>
             <p>Overall,how woulg you experience with us</p>
             <div>
-                <label class="nameLabel">How Satisfied are you with</label><span class="span2"></span>
+                <label class="nameLabel"><b>How Satisfied are you with</b></label><span class="span"></span>
             <table class="tableone">
                 <thead>
                     <tr>
@@ -80,9 +80,9 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div><br>
         <div>
-            <label class="nameLabel">How likely are you to</label><span class="span3"></span>
+            <label class="nameLabel"><b>How likely are you to</b></label><span class="span"></span>
             <table class="tabletwo">
                 <thead>
                     <tr>
@@ -122,11 +122,11 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div><br>
 
 
     <div>
-        <label class="nameLabel" id="textarea">Comments</label>
+        <label class="nameLabel" id="textarea"><strong>comments</strong></label>
         <textarea ></textarea>
     </div>
     <div>
